--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fed4e5d07817da77bedda914c108cb890d1195c3ad8f5979e29ba99565d8f32b"
+  "signature": "sha256:2844457d4ac49f9c08c79cb27d4856f23262ec473ebef5f795cc7e269ef1f7c4"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -409,27 +409,45 @@
       "\n",
       "import pandas as pd\n",
       "\n",
-      "text = [['Team', 'Rank'],\n",
-      "        ['A', 1],['B', 2],['C', 3],['D', 4],[],[]]\n",
+      "text = [['Team', 'Rank'], ['A', 1], ['B', 2], ['C', 3], ['D', 4], ['E', 5], ['F', 6]]\n",
       "\n",
-      "colorscale = [[0, '#272D31'],[.5, '#E9E2E5'],[1, '#ffffff']]\n",
-      "font_colors=['#272D31']\n",
-      "table = FF.create_table(df_sample, colorscale=colorscale)\n",
-      "py.iplot(table, filename='color_table')"
+      "colorscale = [[0, '#272D31'],[.5, '#f7f7f7'],[1, '#ffffff']]\n",
+      "font=['#FCFCFC', '#488957', '#7eac89', '#99c7bd', '#d8a6ab', '#ee7587', '#E41937']\n",
+      "\n",
+      "table = FF.create_table(text, colorscale=colorscale, font_colors=font)\n",
+      "table.layout.width=200\n",
+      "py.iplot(table, filename='font_table')"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9578.embed\" height=\"260px\" width=\"200px\"></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 69,
+       "text": [
+        "<plotly.tools.PlotlyDisplay at 0x107fce150>"
+       ]
+      }
+     ],
+     "prompt_number": 69
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      " "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "####Tables in Subplots"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     ]
     },
     {
      "cell_type": "code",
@@ -440,28 +458,11 @@
      "outputs": []
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "source": [
+      " "
+     ]
     },
     {
      "cell_type": "markdown",
