--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:2844457d4ac49f9c08c79cb27d4856f23262ec473ebef5f795cc7e269ef1f7c4"
+  "signature": "sha256:d55eaa6c87b32a9fd05327df41ad7408246eba2835f6c06c539bb3f14e081c4b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,13 +43,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 1,
        "text": [
         "'1.9.1'"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -81,17 +81,17 @@
      "outputs": [
       {
        "html": [
-        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9464.embed\" height=\"260px\" width=\"100%\"></iframe>"
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9580.embed\" height=\"260px\" width=\"100%\"></iframe>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 2,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107f59e90>"
+        "<plotly.tools.PlotlyDisplay at 0x107ab3e10>"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -104,7 +104,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "####Add links"
+      "####Add Links"
      ]
     },
     {
@@ -148,13 +148,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 20,
+       "prompt_number": 3,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x106cdfa50>"
+        "<plotly.tools.PlotlyDisplay at 0x107ab3a90>"
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -179,9 +179,9 @@
       "\n",
       "data_matrix = [['Name', 'Equation'],\n",
       "               ['Pythagorean Theorem', '$a^{2}+b^{2}=c^{2}$'],\n",
-      "               ['Euler\\'s formula', '$F-E+V=2$'],\n",
+      "               ['Euler\\'s Formula', '$F-E+V=2$'],\n",
       "               ['The Origin of Complex Numbers', '$i^{2}=-1$'],\n",
-      "               ['Einstein\\'s theory of relativity', '$E=m c^{2}$']]\n",
+      "               ['Einstein\\'s Theory of Relativity', '$E=m c^{2}$']]\n",
       "\n",
       "table = FF.create_table(data_matrix)\n",
       "py.iplot(table, filename='latex_table')"
@@ -195,13 +195,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 40,
+       "prompt_number": 4,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x106c7e910>"
+        "<plotly.tools.PlotlyDisplay at 0x107ab3ed0>"
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -241,13 +241,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 41,
+       "prompt_number": 5,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x106c9d9d0>"
+        "<plotly.tools.PlotlyDisplay at 0x107ab3d90>"
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -290,13 +290,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 44,
+       "prompt_number": 6,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x106c7e650>"
+        "<plotly.tools.PlotlyDisplay at 0x107adcb10>"
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -312,12 +312,12 @@
       "import plotly.plotly as py\n",
       "from plotly.tools import FigureFactory as FF\n",
       "\n",
-      "from datetime import datetime\n",
+      "from datetime import date\n",
       "import pandas.io.data as web\n",
       "\n",
-      "df = web.DataReader(\"aapl\", 'yahoo', datetime(2009, 1, 1), datetime(2009, 4, 1))\n",
+      "di = web.DataReader(\"aapl\", 'yahoo', date(2009, 1, 1), date(2009, 4, 1))\n",
       "\n",
-      "table = FF.create_table(df, index=True, index_title='Date')\n",
+      "table = FF.create_table(di, index=True, index_title='Date')\n",
       "py.iplot(table, filename='index_table_pd')"
      ],
      "language": "python",
@@ -329,13 +329,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 51,
+       "prompt_number": 18,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107bfdd10>"
+        "<plotly.tools.PlotlyDisplay at 0x107d455d0>"
        ]
       }
      ],
-     "prompt_number": 51
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -440,13 +440,6 @@
      "metadata": {},
      "source": [
       " "
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "####Tables in Subplots"
      ]
     },
     {
