--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d55eaa6c87b32a9fd05327df41ad7408246eba2835f6c06c539bb3f14e081c4b"
+  "signature": "sha256:ef5b66ab769fd304ccb7c830c0175a3c396ee2158e601db0f861a4e88678b240"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -43,13 +43,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 1,
+       "prompt_number": 67,
        "text": [
         "'1.9.1'"
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 67
     },
     {
      "cell_type": "markdown",
@@ -85,13 +85,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 68,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107ab3e10>"
+        "<plotly.tools.PlotlyDisplay at 0x107c070d0>"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 68
     },
     {
      "cell_type": "markdown",
@@ -148,13 +148,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 69,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107ab3a90>"
+        "<plotly.tools.PlotlyDisplay at 0x107c07a50>"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 69
     },
     {
      "cell_type": "markdown",
@@ -195,13 +195,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 70,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107ab3ed0>"
+        "<plotly.tools.PlotlyDisplay at 0x107c07c50>"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 70
     },
     {
      "cell_type": "markdown",
@@ -241,13 +241,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 71,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107ab3d90>"
+        "<plotly.tools.PlotlyDisplay at 0x107c0aad0>"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 71
     },
     {
      "cell_type": "markdown",
@@ -290,13 +290,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 72,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107adcb10>"
+        "<plotly.tools.PlotlyDisplay at 0x107c0a150>"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 72
     },
     {
      "cell_type": "markdown",
@@ -315,7 +315,7 @@
       "from datetime import date\n",
       "import pandas.io.data as web\n",
       "\n",
-      "di = web.DataReader(\"aapl\", 'yahoo', date(2009, 1, 1), date(2009, 4, 1))\n",
+      "di = web.DataReader(\"aapl\", 'yahoo', date(2009, 1, 1), date(2009, 3, 1))\n",
       "\n",
       "table = FF.create_table(di, index=True, index_title='Date')\n",
       "py.iplot(table, filename='index_table_pd')"
@@ -325,17 +325,17 @@
      "outputs": [
       {
        "html": [
-        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9574.embed\" height=\"1940px\" width=\"100%\"></iframe>"
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9574.embed\" height=\"1250px\" width=\"100%\"></iframe>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 18,
+       "prompt_number": 73,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107d455d0>"
+        "<plotly.tools.PlotlyDisplay at 0x107cb9e90>"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 73
     },
     {
      "cell_type": "markdown",
@@ -364,7 +364,7 @@
       "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/gapminderDataFiveYear.csv')\n",
       "df_sample = df[400:410]\n",
       "\n",
-      "colorscale = [[0, '#4C152B'],[.5, '#E9E2E5'],[1, '#ffffff']]\n",
+      "colorscale = [[0, '#4d004c'],[.5, '#f2e5ff'],[1, '#ffffff']]\n",
       "\n",
       "table = FF.create_table(df_sample, colorscale=colorscale)\n",
       "py.iplot(table, filename='color_table')"
@@ -378,13 +378,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 57,
+       "prompt_number": 81,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107bfde10>"
+        "<plotly.tools.PlotlyDisplay at 0x107c07990>"
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 81
     },
     {
      "cell_type": "markdown",
@@ -407,15 +407,13 @@
       "import plotly.plotly as py\n",
       "from plotly.tools import FigureFactory as FF\n",
       "\n",
-      "import pandas as pd\n",
-      "\n",
       "text = [['Team', 'Rank'], ['A', 1], ['B', 2], ['C', 3], ['D', 4], ['E', 5], ['F', 6]]\n",
       "\n",
-      "colorscale = [[0, '#272D31'],[.5, '#f7f7f7'],[1, '#ffffff']]\n",
-      "font=['#FCFCFC', '#488957', '#7eac89', '#99c7bd', '#d8a6ab', '#ee7587', '#E41937']\n",
+      "colorscale = [[0, '#272D31'],[.5, '#ffffff'],[1, '#ffffff']]\n",
+      "font=['#FCFCFC', '#00EE00', '#008B00', '#004F00', '#660000', '#CD0000', '#FF3030']\n",
       "\n",
       "table = FF.create_table(text, colorscale=colorscale, font_colors=font)\n",
-      "table.layout.width=200\n",
+      "table.layout.width=250\n",
       "py.iplot(table, filename='font_table')"
      ],
      "language": "python",
@@ -423,17 +421,17 @@
      "outputs": [
       {
        "html": [
-        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9578.embed\" height=\"260px\" width=\"200px\"></iframe>"
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9578.embed\" height=\"260px\" width=\"250px\"></iframe>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 69,
+       "prompt_number": 75,
        "text": [
-        "<plotly.tools.PlotlyDisplay at 0x107fce150>"
+        "<plotly.tools.PlotlyDisplay at 0x107cb9e10>"
        ]
       }
      ],
-     "prompt_number": 69
+     "prompt_number": 75
     },
     {
      "cell_type": "markdown",
@@ -443,12 +441,79 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "####Tables with Graphs"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "import plotly.plotly as py\n",
+      "import plotly.graph_objs as go\n",
+      "from plotly.tools import FigureFactory as FF\n",
+      "\n",
+      "# Add table data\n",
+      "table_data = [['Team', 'Wins', 'Losses', 'Ties'],\n",
+      "              ['Montr\u00e9al<br>Canadiens', 18, 4, 0],\n",
+      "              ['Dallas Stars', 18, 5, 0],\n",
+      "              ['NY Rangers', 16, 5, 0], \n",
+      "              ['Boston<br>Bruins', 13, 8, 0],\n",
+      "              ['Chicago<br>Blackhawks', 13, 8, 0],\n",
+      "              ['LA Kings', 13, 8, 0],\n",
+      "              ['Ottawa<br>Senators', 12, 5, 0]]\n",
+      "# Initialize a figure with FF.create_table(table_data)\n",
+      "figure = FF.create_table(table_data, height_constant=60)\n",
+      "\n",
+      "# Add graph data\n",
+      "teams = ['Montr\u00e9al Canadiens', 'Dallas Stars', 'NY Rangers',\n",
+      "         'Boston Bruins', 'Chicago Blackhawks', 'Ottawa Senators']\n",
+      "GFPG = [3.54, 3.48, 3.0, 3.27, 2.83, 2.45, 3.18]\n",
+      "GAPG = [2.17, 2.57, 2.0, 2.91, 2.57, 2.14, 2.77]\n",
+      "# Make traces for graph\n",
+      "trace1 = go.Scatter(x=teams, y=GFPG,\n",
+      "                    marker=dict(color='#0099ff'),\n",
+      "                    name='Goals For<br>Per Game',\n",
+      "                    xaxis='x2', yaxis='y2')\n",
+      "trace2 = go.Scatter(x=teams, y=GAPG,\n",
+      "                    marker=dict(color='#404040'),\n",
+      "                    name='Goals Against<br>Per Game',\n",
+      "                    xaxis='x2', yaxis='y2')\n",
+      "\n",
+      "# Add trace data to figure\n",
+      "figure['data'].extend(Data([trace1, trace2]))\n",
+      "\n",
+      "# Edit layout for subplots\n",
+      "figure.layout.xaxis.update({'domain': [0, .5]})\n",
+      "figure.layout.xaxis2.update({'domain': [0.6, 1.]})\n",
+      "# The graph's yaxis MUST BE anchored to the graph's xaxis\n",
+      "figure.layout.yaxis2.update({'anchor': 'x2'})\n",
+      "figure.layout.yaxis2.update({'title': 'Goals'})\n",
+      "# Update the margins to add a title and see graph x-labels. \n",
+      "figure.layout.margin.update({'t':50, 'b':100})\n",
+      "figure.layout.update({'title': '2016 Hockey Stats'})\n",
+      "\n",
+      "# Plot!\n",
+      "py.iplot(figure, filename='subplot_table')\n"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9584.embed\" height=\"530px\" width=\"100%\"></iframe>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 77,
+       "text": [
+        "<plotly.tools.PlotlyDisplay at 0x107cb9990>"
+       ]
+      }
+     ],
+     "prompt_number": 77
     },
     {
      "cell_type": "markdown",
@@ -582,7 +647,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x104a93f90>"
+        "<IPython.core.display.HTML at 0x107c07290>"
        ]
       },
       {
@@ -592,7 +657,7 @@
        "metadata": {},
        "output_type": "display_data",
        "text": [
-        "<IPython.core.display.HTML at 0x104a93fd0>"
+        "<IPython.core.display.HTML at 0x107c07710>"
        ]
       },
       {
@@ -601,9 +666,19 @@
        "text": [
         "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
        ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+        "\n",
+        "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+        "\n"
+       ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 82
     },
     {
      "cell_type": "code",
