--- a/_posts/python/filled-chord/filled-chord.ipynb
+++ b/_posts/python/filled-chord/filled-chord.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +255,7 @@
        " [4.7752208334564843, 6.2517693806436867]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -405,7 +405,7 @@
        "       [ 0.40429305,  0.2988253 ,  0.17577959,  0.        ,  0.5976506 ]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -479,7 +479,7 @@
        "       [3, 2, 1, 0, 4]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -686,7 +686,7 @@
        "'M 1,4 Q -0.5, 2.35 3.745, 1.47'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -726,7 +726,7 @@
        "'L 0.5, 0.866025403784 L 0.587785252292, 0.809016994375 L 0.669130606359, 0.743144825477 L 0.743144825477, 0.669130606359 L 0.809016994375, 0.587785252292 L 0.866025403784, 0.5 '"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -1032,30 +1032,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9654.embed\" height=\"400px\" width=\"400px\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = Data(ideograms+ribbon_info)\n",
     "fig = Figure(data=data, layout=layout)\n",
     "\n",
-    "py.iplot(fig, filename='chord-diagram-Fb') "
+    "url = py.plot(fig, filename='chord-diagram-Fb') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "    <a href=\"https://plot.ly/~chelsea_lyn/9654/\" target=\"_blank\" title=\"Diagram of Facebook Comments\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/9654.png\" alt=\"Ideograms\" style=\"max-width: 100%;width: 400px;\"  width=\"400\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
+    "    <script data-plotly=\"chelsea_lyn:9654\"  src=\"https://plot.ly/embed.js\" async></script>\n",
+    "</div>"
    ]
   },
   {
@@ -1079,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
