add vertical table+graph subplot example

--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +473,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,6 +535,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/9925.embed\" height=\"800px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "from plotly.tools import FigureFactory as FF\n",
+    "\n",
+    "# Add table data\n",
+    "table_data = [['Team', 'Wins', 'Losses', 'Ties'],\n",
+    "              ['Montréal<br>Canadiens', 18, 4, 0],\n",
+    "              ['Dallas Stars', 18, 5, 0],\n",
+    "              ['NY Rangers', 16, 5, 0], \n",
+    "              ['Boston<br>Bruins', 13, 8, 0],\n",
+    "              ['Chicago<br>Blackhawks', 13, 8, 0],\n",
+    "              ['Ottawa<br>Senators', 12, 5, 0]]\n",
+    "# Initialize a figure with FF.create_table(table_data)\n",
+    "figure = FF.create_table(table_data, height_constant=60)\n",
+    "\n",
+    "# Add graph data\n",
+    "teams = ['Montréal Canadiens', 'Dallas Stars', 'NY Rangers',\n",
+    "         'Boston Bruins', 'Chicago Blackhawks', 'Ottawa Senators']\n",
+    "GFPG = [3.54, 3.48, 3.0, 3.27, 2.83, 2.45, 3.18]\n",
+    "GAPG = [2.17, 2.57, 2.0, 2.91, 2.57, 2.14, 2.77]\n",
+    "# Make traces for graph\n",
+    "trace1 = go.Scatter(x=teams, y=GFPG, type='bar',\n",
+    "                    marker=dict(color='#0099ff'),\n",
+    "                    name='Goals For<br>Per Game',\n",
+    "                    xaxis='x2', yaxis='y2')\n",
+    "trace2 = go.Scatter(x=teams, y=GAPG, type='bar',\n",
+    "                    marker=dict(color='#404040'),\n",
+    "                    name='Goals Against<br>Per Game',\n",
+    "                    xaxis='x2', yaxis='y2')\n",
+    "\n",
+    "# Add trace data to figure\n",
+    "figure['data'].extend(go.Data([trace1, trace2]))\n",
+    "\n",
+    "# Edit layout for subplots\n",
+    "figure.layout.yaxis.update({'domain': [0, .45]})\n",
+    "figure.layout.yaxis2.update({'domain': [.6, 1]})\n",
+    "# The graph's yaxis2 MUST BE anchored to the graph's xaxis2 and vice versa\n",
+    "figure.layout.yaxis2.update({'anchor': 'x2'})\n",
+    "figure.layout.xaxis2.update({'anchor': 'y2'})\n",
+    "figure.layout.yaxis2.update({'title': 'Goals'})\n",
+    "# Update the margins to add a title and see graph x-labels. \n",
+    "figure.layout.margin.update({'t':75, 'l':50})\n",
+    "figure.layout.update({'title': '2016 Hockey Stats'})\n",
+    "# Update the height because adding a graph vertically will interact with\n",
+    "# the plot height calculated for the table\n",
+    "figure.layout.update({'height':800})\n",
+    "\n",
+    "# Plot!\n",
+    "py.iplot(figure, filename='subplot_table_vertical')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -543,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -633,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -668,16 +748,6 @@
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from ipython_nbconvert instead.\n",
-      "  \"You should import from ipython_nbconvert instead.\", ShimWarning)\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
-     ]
     }
    ],
    "source": [
@@ -693,7 +763,7 @@
     "    'How to make Tables in Python with Plotly.',\n",
     "    name = 'Tables',\n",
     "    thumbnail='thumbnail/table.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=31)  "
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=32)  "
    ]
   },
   {
