table example update

--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +473,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
     "\n",
     "# Add graph data\n",
     "teams = ['Montréal Canadiens', 'Dallas Stars', 'NY Rangers',\n",
-    "         'Boston Bruins', 'Chicago Blackhawks', 'Ottawa Senators']\n",
+    "         'Boston Bruins', 'Chicago Blackhawks', 'LA Kings', 'Ottawa Senators']\n",
     "GFPG = [3.54, 3.48, 3.0, 3.27, 2.83, 2.45, 3.18]\n",
     "GAPG = [2.17, 2.57, 2.0, 2.91, 2.57, 2.14, 2.77]\n",
     "# Make traces for graph\n",
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -550,7 +550,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,8 +574,8 @@
     "# Add graph data\n",
     "teams = ['Montréal Canadiens', 'Dallas Stars', 'NY Rangers',\n",
     "         'Boston Bruins', 'Chicago Blackhawks', 'Ottawa Senators']\n",
-    "GFPG = [3.54, 3.48, 3.0, 3.27, 2.83, 2.45, 3.18]\n",
-    "GAPG = [2.17, 2.57, 2.0, 2.91, 2.57, 2.14, 2.77]\n",
+    "GFPG = [3.54, 3.48, 3.0, 3.27, 2.83, 3.18]\n",
+    "GAPG = [2.17, 2.57, 2.0, 2.91, 2.57, 2.77]\n",
     "# Make traces for graph\n",
     "trace1 = go.Scatter(x=teams, y=GFPG, type='bar',\n",
     "                    marker=dict(color='#0099ff'),\n",
