--- a/_posts/python/table/table.ipynb
+++ b/_posts/python/table/table.ipynb
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -550,7 +550,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,14 +577,12 @@
     "GFPG = [3.54, 3.48, 3.0, 3.27, 2.83, 3.18]\n",
     "GAPG = [2.17, 2.57, 2.0, 2.91, 2.57, 2.77]\n",
     "# Make traces for graph\n",
-    "trace1 = go.Scatter(x=teams, y=GFPG, type='bar',\n",
-    "                    marker=dict(color='#0099ff'),\n",
-    "                    name='Goals For<br>Per Game',\n",
-    "                    xaxis='x2', yaxis='y2')\n",
-    "trace2 = go.Scatter(x=teams, y=GAPG, type='bar',\n",
-    "                    marker=dict(color='#404040'),\n",
-    "                    name='Goals Against<br>Per Game',\n",
-    "                    xaxis='x2', yaxis='y2')\n",
+    "trace1 = go.Bar(x=teams, y=GFPG, xaxis='x2', yaxis='y2',\n",
+    "                marker=dict(color='#0099ff'),\n",
+    "                name='Goals For<br>Per Game')\n",
+    "trace2 = go.Bar(x=teams, y=GAPG, xaxis='x2', yaxis='y2',\n",
+    "                marker=dict(color='#404040'),\n",
+    "                name='Goals Against<br>Per Game')\n",
     "\n",
     "# Add trace data to figure\n",
     "figure['data'].extend(go.Data([trace1, trace2]))\n",
@@ -713,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
