update thumbnail name for treeplots

--- a/_posts/python/tree-plot/tree-plot.ipynb
+++ b/_posts/python/tree-plot/tree-plot.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -251,10 +251,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -271,7 +269,7 @@
     "    'How to make interactive tree-plot in Python with Plotly. '\n",
     "    'An examples of a tree-plot in Plotly.',\n",
     "    name = 'Tree-plots',\n",
-    "    thumbnail='/images/treeplot.png', language='python',\n",
+    "    thumbnail='thumbnail/treeplot.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=29)"
    ]
   },
