add privacy doc

--- a/_posts/python/privacy/privacy.ipynb
+++ b/_posts/python/privacy/privacy.ipynb
@@ -236,6 +236,108 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Making <b>ALL</b> of your Plotly Plots Private"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####Import `json` and `requests`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "from requests.auth import HTTPBasicAuth"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####Define variables\n",
+    "Including YOUR [USERNAME and API KEY](https://plot.ly/settings/api)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "username = 'private_plotly' # Replace with YOUR USERNAME\n",
+    "api_key = 'k0yy0ztssk' # Replace with YOUR API KEY\n",
+    "\n",
+    "auth = HTTPBasicAuth(username, api_key)\n",
+    "headers = {'Plotly-Client-Platform': 'python'}\n",
+    "\n",
+    "page_size = 500"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#####Collect filenames of <b>ALL</b> of your plots and update `world_readable` of each plot with a PATCH request"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL of your plots are now private - visit: https://plot.ly/organize/home to view your private plots!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_pages(username, page_size):\n",
+    "    url = 'https://api.plot.ly/v2/folders/all?user='+username+'&filetype=plot&page_size='+str(page_size)\n",
+    "    response = requests.get(url, auth=auth, headers=headers)\n",
+    "    if response.status_code != 200:\n",
+    "        return\n",
+    "    page = json.loads(response.content)\n",
+    "    yield page\n",
+    "    while True:\n",
+    "        resource = page['children']['next'] \n",
+    "        if not resource:\n",
+    "            break\n",
+    "        response = requests.get(resource, auth=auth, headers=headers)\n",
+    "        if response.status_code != 200:\n",
+    "            break\n",
+    "        page = json.loads(response.content)\n",
+    "        yield page\n",
+    "        \n",
+    "def make_all_plots_private(username, page_size=500):\n",
+    "    for page in get_pages(username, page_size):\n",
+    "        for x in range(0, len(page['children']['results'])):\n",
+    "            fid = page['children']['results'][x]['fid']\n",
+    "            requests.patch('https://api.plot.ly/v2/files/'+fid, {\"world_readable\": False}, auth=auth, headers=headers)\n",
+    "    print('ALL of your plots are now private - visit: https://plot.ly/organize/home to view your private plots!') \n",
+    "    \n",
+    "make_all_plots_private(username)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Reference"
    ]
   },
@@ -293,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -326,24 +428,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 7.0.3, however version 7.1.0 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "\u001b[33mDEPRECATION: --download-cache has been deprecated and will be removed in the future. Pip now automatically uses and configures its cache.\u001b[0m\n",
-      "Requirement already up-to-date: publisher in /Users/nedaamin/Repos/venv27/lib/python2.7/site-packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/nedaamin/Repos/venv27/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from ipython_nbconvert instead.\n",
-      "\n",
-      "/Users/nedaamin/Repos/venv27/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
     }
    ],
@@ -390,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
