modify linear gauge docs

--- a/_posts/python/gauge-chart/linear-gauge.ipynb
+++ b/_posts/python/gauge-chart/linear-gauge.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
     "traces = []\n",
     "for i in range(len(scales)):\n",
     "    traces.append(go.Scatter(\n",
-    "        x=[0.6], # Pad the title - a longer scale title would need a higher value \n",
+    "        x=[0.7], # Pad the title - a longer scale title would need a higher value \n",
     "        y=[6.25],\n",
     "        text=scales[i],\n",
     "        mode='text',\n",
@@ -99,7 +99,7 @@
     "for i in range(len(scales)):\n",
     "    yaxes.append({'anchor':'x'+str(i+1), 'range':[-.5,6.5],\n",
     "                  'showgrid': False, 'showline': False, 'zeroline': False,\n",
-    "                  'ticks':'inside', 'ticklen': 40,\n",
+    "                  'ticks':'inside', 'ticklen': 35,\n",
     "                  'ticktext':scale_labels[i], 'tickvals':range(len(scale_labels[i]))\n",
     "                 })\n",
     "\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +145,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -202,6 +202,16 @@
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -217,7 +227,7 @@
     "    'How to make interactive linear-guage charts in Python with Plotly. ',\n",
     "    name = 'Linear-Gauge-Chart',\n",
     "    thumbnail='thumbnail/linear-gauge.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=30)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=31)"
    ]
   },
   {
