change width of gauge plot

--- a/_posts/python/gauge-chart/linear-gauge.ipynb
+++ b/_posts/python/gauge-chart/linear-gauge.ipynb
@@ -24,8 +24,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the following tutorial shows how to create a linear-gauge chart with 4 gauges. It's recommended to use a `width` between 600 and 1000px and `ticklen` should be `width/20`. These variables are definied in the code below.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -33,13 +40,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10253.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10253.embed\" height=\"525px\" width=\"800px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +72,7 @@
     "traces = []\n",
     "for i in range(len(scales)):\n",
     "    traces.append(go.Scatter(\n",
-    "        x=[0.7], # Pad the title - a longer scale title would need a higher value \n",
+    "        x=[0.6], # Pad the title - a longer scale title would need a higher value \n",
     "        y=[6.25],\n",
     "        text=scales[i],\n",
     "        mode='text',\n",
@@ -80,15 +87,17 @@
     "shapes = []\n",
     "for i in range(len(scales)):\n",
     "    shapes.append({'type': 'rect',\n",
-    "                   'x0': .025, 'x1': 1,\n",
+    "                   'x0': .02, 'x1': 1.02,\n",
     "                   'y0': 0, 'y1': 6,\n",
     "                   'xref':'x'+str(i+1), 'yref':'y'+str(i+1)})\n",
     "\n",
+    "x_domains = [[0, .25], [.25, .5], [.5, .75], [.75, 1]] # Split for 4 scales\n",
+    "chart_width = 800\n",
+    "\n",
     "# Define X-Axes\n",
     "xaxes = []\n",
-    "x_domains = [[0, .25], [.25, .5], [.5, .75], [.75, 1]] # Split for 4 scales\n",
     "for i in range(len(scales)):\n",
-    "    xaxes.append({'domain': x_domains[i], 'range': [0,5], \n",
+    "    xaxes.append({'domain': x_domains[i], 'range':[0, 4],\n",
     "                  'showgrid': False, 'showline': False,\n",
     "                  'zeroline': False, 'showticklabels': False})\n",
     "\n",
@@ -99,7 +108,7 @@
     "for i in range(len(scales)):\n",
     "    yaxes.append({'anchor':'x'+str(i+1), 'range':[-.5,6.5],\n",
     "                  'showgrid': False, 'showline': False, 'zeroline': False,\n",
-    "                  'ticks':'inside', 'ticklen': 35,\n",
+    "                  'ticks':'inside', 'ticklen': chart_width/20,\n",
     "                  'ticktext':scale_labels[i], 'tickvals':range(len(scale_labels[i]))\n",
     "                 })\n",
     "\n",
@@ -113,6 +122,7 @@
     "          'yaxis2':yaxes[1],\n",
     "          'yaxis3':yaxes[2],\n",
     "          'yaxis4':yaxes[3],\n",
+    "          'width':chart_width\n",
     "}\n",
     "\n",
     "### ADD RATING DATA HERE ###\n",
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -139,13 +149,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10255.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10255.embed\" height=\"525px\" width=\"800px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
