--- a/_posts/python/gauge-chart/linear-gauge.ipynb
+++ b/_posts/python/gauge-chart/linear-gauge.ipynb
@@ -27,30 +27,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note the following tutorial shows how to create a linear-gauge chart with 4 gauges. It's recommended to use a `width` between 600 and 1000px and `ticklen` should be `width/20`. These variables are definied in the code below.\n"
+    "Note the following tutorial shows how to create a linear-gauge chart with 4 gauges. It's recommended to use a `width` between 600-1000px and `ticklen` should be `width/20`. These variables are definied in the code below.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10253.embed\" height=\"525px\" width=\"800px\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from plotly import tools\n",
     "import plotly.plotly as py\n",
@@ -128,7 +114,17 @@
     "### ADD RATING DATA HERE ###\n",
     "\n",
     "fig = dict(data=traces, layout=layout)\n",
-    "py.iplot(fig, filename='linear-gauge-layout')"
+    "url = py.plot(fig, filename='linear-gauge-layout')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "    <a href=\"https://plot.ly/~chelsea_lyn/10253/\" target=\"_blank\" title=\"Layout of Linear-Gauge Chart\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/10253.png\" alt=\"Ideograms\" style=\"max-width: 100%;width: 800px;\"  width=\"800\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
+    "    <script data-plotly=\"chelsea_lyn:10253\"  src=\"https://plot.ly/embed.js\" async></script>\n",
+    "</div>"
    ]
   },
   {
@@ -141,25 +137,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10255.embed\" height=\"525px\" width=\"800px\"></iframe>"
-      ],
-      "text/plain": [
-       "<plotly.tools.PlotlyDisplay object>"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ratings = [4.5, 5, 1, 2.75]\n",
     "\n",
@@ -172,12 +154,22 @@
     "    ))\n",
     "\n",
     "fig = dict(data=traces, layout=layout)\n",
-    "py.iplot(fig, filename='linear-gauge')"
+    "url = py.plot(fig, filename='linear-gauge')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "    <a href=\"https://plot.ly/~chelsea_lyn/10255/\" target=\"_blank\" title=\"Linear-Gauge Chart\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/10255.png\" alt=\"Ideograms\" style=\"max-width: 100%;width: 800px;\"  width=\"800\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
+    "    <script data-plotly=\"chelsea_lyn:10255\"  src=\"https://plot.ly/embed.js\" async></script>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -211,16 +203,6 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
      ]
     }
    ],
